fix dependencies and build